jobcore added get started page

--- a/src/docs/layouts/_layout.njk
+++ b/src/docs/layouts/_layout.njk
@@ -7,16 +7,16 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         
         <!-- SEO Meta Tags-->
-        <meta name="description" content="Square - Premium Bootstrap Theme">
+        <meta name="description" content="JobCore - Hospitality Jobs Marketplace">
         <meta name="keywords" content="bootstrap, theme, template, multipurpose, landing, html5, css3, javascript, event, case study, photography, about, team, portfolio, services, contact, pricing, faqs, careers, blog, sign in, sign up, coming soon, legal">
         <meta name="author" content="Webinning Ltd.">
 
         <!-- Page Title -->
         <title>
         {% if title %}
-            {{ title }} | Square Documentation - Premium Bootstrap Theme
+            {{ title }} | JobCore - Hospitality Job Marketplace
         {% else %}
-            Square Documentation - Premium Bootstrap Theme
+            JobCore - Hospitality Job Marketplace
         {% endif %}
         </title>
         {% include "partials/_favicons.njk" %}
