--- a/src/templates/app.njk
+++ b/src/templates/app.njk
@@ -13,10 +13,11 @@
                 </div>
                 <div class="col-12" data-aos="fade-up">
                     <div class="device-laptop">
+                  
                         <picture>
-                            <source srcset="assets/images/frames/frame-06.webp" type="image/webp">
-                            <source srcset="assets/images/frames/frame-06.jpg" type="image/jpg"> 
-                            <img src="assets/images/frames/frame-06.jpg" alt="frame-06" class="screen">
+                            <source srcset="../assets/images/frames/emp-dashboard-screen.jpg" type="image/png">
+                            <source srcset="../assets/images/frames/emp-dashboard-screen.jpg" type="image/png">
+                            <img src="../assets/images/frames/emp-dashboard-screen.jpg" alt="printscreen-07" class="screen">
                         </picture>
                         <img src="assets/images/frames/laptop-frame.svg" alt="laptop-frame" class="img-fluid"/>
                     </div>
@@ -151,9 +152,9 @@
                         <div class="col-lg-6 mt-lg-n9 mb-lg-n9">
                             <div class="device-laptop">
                                 <picture>
-                                    <source srcset="assets/images/frames/frame-07.webp" type="image/webp">
-                                    <source srcset="assets/images/frames/frame-07.jpg" type="image/jpg"> 
-                                    <img src="assets/images/frames/frame-07.jpg" alt="frame-07" class="screen">
+                                    <source srcset="assets/images/frames/emp-talent.png" type="image/webp">
+                                    <source srcset="assets/images/frames/emp-talent.png" type="image/jpg"> 
+                                    <img src="assets/images/frames/emp-talent.png" alt="frame-07" class="screen">
                                 </picture>
                                 <img src="assets/images/frames/laptop-frame.svg" alt="laptop-frame" class="img-fluid"/>
                             </div>
@@ -334,16 +335,7 @@
                         </div>
                         <div class="col-lg-5">
                             <div>
-                                <picture>
-                                    <source srcset="assets/images/photos/photo-91.webp" type="image/webp">
-                                    <source srcset="assets/images/photos/photo-91.jpg" type="image/jpg"> 
-                                    <img src="assets/images/photos/photo-91.jpg" alt="photo-91" class="img-fluid w-75 ml-n4 ml-lg-n6">
-                                </picture>
-                                <picture>
-                                    <source srcset="assets/images/photos/photo-92.webp" type="image/webp">
-                                    <source srcset="assets/images/photos/photo-92.jpg" type="image/jpg"> 
-                                    <img src="assets/images/photos/photo-92.jpg" alt="photo-92" class="img-fluid w-100 mt-n6">
-                                </picture>
+                               <img className="mx-auto d-block pb-3" src="assets/images/frames/animation-employer2.gif" />
                             </div>
                         </div>
                     </div>
