--- a/src/templates/layouts/_footer.njk
+++ b/src/templates/layouts/_footer.njk
@@ -32,24 +32,24 @@
                             <div class="col-6 col-md-4 mb-4 mb-md-0">
                                 <h3 class="h6 text-uppercase mb-3">Services</h3>
                                 <ul class="list-unstyled">
-                                    <li class="mb-1"><a href="#" class="text-reset">Job Seekers</a></li>
-                                    <li class="mb-1"><a href="#" class="text-reset">Employers</a></li>
+                                    <li class="mb-1"><a href="./job-seekers.html" class="text-reset">Job Seekers</a></li>
+                                    <li class="mb-1"><a href="./employers.html" class="text-reset">Employers</a></li>
                                 </ul>
                             </div>
                             <div class="col-6 col-md-4 mb-4 mb-md-0">
                                 <h3 class="h6 text-uppercase mb-3">Company</h3>
                                 <ul class="list-unstyled">
-                                    <li class="mb-1"><a href="#" class="text-reset">About Us</a></li>
-                                    <li class="mb-1"><a href="#" class="text-reset">Contact Us</a></li>
-                                    <li class="mb-1"><a href="#" class="text-reset">Positions</a></li>
+                                    <li class="mb-1"><a href="./about.html" class="text-reset">About Us</a></li>
+                                    <li class="mb-1"><a href="./contact.html" class="text-reset">Contact Us</a></li>
+                                    {# <li class="mb-1"><a href="#" class="text-reset">Positions</a></li> #}
                                 </ul>
                             </div>
                             <div class="col-6 col-md-4">
                                 <h3 class="h6 text-uppercase mb-3">Help</h3>
                                 <ul class="list-unstyled">
-                                    <li class="mb-1"><a href="#" class="text-reset">FAQs</a></li>
-                                    <li class="mb-1"><a href="#" class="text-reset">Pricing</a></li>
-                                    <li class="mb-1"><a href="#" class="text-reset">Terms</a></li>
+                                    <li class="mb-1"><a href="./faqs.html" class="text-reset">FAQs</a></li>
+                                    <li class="mb-1"><a href="./pricing.html" class="text-reset">Pricing</a></li>
+                                    <li class="mb-1"><a href="./legal.html" class="text-reset">Terms</a></li>
                                 </ul>
                             </div>
                         </div>
