--- a/src/templates/layouts/_header.njk
+++ b/src/templates/layouts/_header.njk
@@ -64,7 +64,7 @@
                 </ul>
 
                 <!-- Buy button -->
-                <a class="btn btn-sm btn-secondary text-uppercase mt-3 mt-lg-0 ml-lg-4 d-block d-lg-inline-block" href="https://themes.getbootstrap.com/product/square" target="_blank" rel="noopener">Get started</a>
+                <a class="btn btn-sm btn-secondary text-uppercase mt-3 mt-lg-0 ml-lg-4 d-block d-lg-inline-block" href="./get-started.html" target="_blank" rel="noopener">Get started</a>
             </div>
         {% endif %}
     </div>
