--- a/src/templates/layouts/_layout.njk
+++ b/src/templates/layouts/_layout.njk
@@ -7,12 +7,12 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         
         <!-- SEO Meta Tags-->
-        <meta name="description" content="Square - Premium Bootstrap Theme">
-        <meta name="keywords" content="bootstrap, theme, template, multipurpose, landing, html5, css3, javascript, event, case study, photography, about, team, portfolio, services, contact, pricing, faqs, careers, blog, sign in, sign up, coming soon, legal">
+        <meta name="description" content="JobCore - Hospitality Job Marketplace">
+        <meta name="keywords" content="jobs, employee, time tracking, scheduling, hospitality, time tracking, get hired, staffing, get hired, mobile app">
         <meta name="author" content="Webinning Ltd.">
 
         <!-- Page title-->
-        <title>{% if title %}{{ title }} | {% endif %}Square - Premium Bootstrap Theme</title>
+        <title>{% if title %}{{ title }} | {% endif %}JobCore - Hospitality Job Marketplace</title>
 
         {% include "partials/_favicons.njk" %}
 
