--- a/src/templates/index.njk
+++ b/src/templates/index.njk
@@ -148,31 +148,16 @@
                     Sign up today and give it a try!</p>
               
                 </div>
-                
-      
-
-                {# <div class="col-md mb-6 mb-md-0" data-aos="fade-up">
-                    <svg width="40" height="40" class="mb-3" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><title>crime-man-ninja</title><path d="M11.979,17.125c4.052,0,6.875-5.1,6.875-9.67a10.134,10.134,0,0,0-.4-2.808h0A6.3,6.3,0,0,0,11.979.125,6.322,6.322,0,0,0,5.51,4.654l0,.009a10.38,10.38,0,0,0-.4,2.8C5.105,12.035,7.929,17.125,11.979,17.125Zm4.638-5.844a.25.25,0,0,1-.312.148,13.712,13.712,0,0,0-4.3-.554,13.886,13.886,0,0,0-4.346.559.248.248,0,0,1-.312-.147,10.963,10.963,0,0,1-.722-3.4A.244.244,0,0,1,6.689,7.7a.25.25,0,0,1,.18-.077H17.09a.25.25,0,0,1,.25.262A11.031,11.031,0,0,1,16.617,11.281Z"/><path d="M21.632,18.127A.251.251,0,0,0,22,17.906V16.375a.25.25,0,0,1,.25-.25H23a.75.75,0,0,0,0-1.5h-.75a.25.25,0,0,1-.25-.25v-3a1.5,1.5,0,0,0-3,0v3a.25.25,0,0,1-.25.25H18a.75.75,0,0,0,0,1.5h.75a.25.25,0,0,1,.25.25v.2a.25.25,0,0,0,.132.22Z"/><path d="M23.033,19.792a11.994,11.994,0,0,0-2.45-1.4.25.25,0,0,0-.32.109l-1.181,1.667-2.367,3.338a.25.25,0,0,0,.219.37H23.5a.5.5,0,0,0,.5-.5V21.77A2.463,2.463,0,0,0,23.033,19.792Z"/><path d="M11.079,21.4,7.552,17.432a.5.5,0,0,0-.467-.16,14.53,14.53,0,0,0-6.118,2.52A2.461,2.461,0,0,0,0,21.77v1.605a.5.5,0,0,0,.5.5H7.826a.252.252,0,0,0,.19-.087l3.066-2.06A.251.251,0,0,0,11.079,21.4Z"/><path d="M18.31,17.837a.252.252,0,0,0-.161-.145c-.244-.069-.5-.136-.76-.2a.252.252,0,0,0-.249.08l-.633.586-5.731,5.305a.25.25,0,0,0,.189.413h3.191a.251.251,0,0,0,.22-.13l3.068-4.452.855-1.24A.252.252,0,0,0,18.31,17.837Z"/><path d="M8.489,8.826a.75.75,0,0,0,1.022,1.1.567.567,0,0,1,.557,0,.75.75,0,1,0,1.022-1.1A2.017,2.017,0,0,0,8.489,8.826Z"/><path d="M13.421,10.125a.746.746,0,0,0,.511-.2.567.567,0,0,1,.557,0,.75.75,0,1,0,1.022-1.1,2.017,2.017,0,0,0-2.6,0,.75.75,0,0,0,.511,1.3Z"/></svg>
-                    <h2 class="h5 mb-2">Not just for developers</h2>
-                    <p class="font-size-5 mb-0">You don't need to be an expert developer to harness the user friendly simplicity and flexibility of Square.</p>
-                </div>
-                <div class="col-md mb-6 mb-md-0" data-aos="fade-up" data-aos-delay="50">
-                    <svg width="40" height="40" class="mb-3" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><title>layout-dashboard</title><path d="M.793.786A1,1,0,0,0,.5,1.493V12.508a1,1,0,0,0,1,1h8a1,1,0,0,0,1-1v-11a1,1,0,0,0-1-1L1.5.493A1,1,0,0,0,.793.786Z"/><path d="M22.5.493l-8,.014a1,1,0,0,0-1,1v5a1,1,0,0,0,1,1h8a1,1,0,0,0,1-1V1.493a1,1,0,0,0-1-1Z"/><path d="M10.207,23.214a1,1,0,0,0,.293-.707v-5a1,1,0,0,0-1-1h-8a1,1,0,0,0-1,1v4.985a1,1,0,0,0,1,1l8,.014A1,1,0,0,0,10.207,23.214Z"/><path d="M22.5,10.508h-8a1,1,0,0,0-1,1v11a1,1,0,0,0,1,1l8-.014a1,1,0,0,0,1-1V11.508A1,1,0,0,0,22.5,10.508Z"/></svg>
-                    <h2 class="h5 mb-2">Timeless design</h2>
-                    <p class="font-size-5 mb-0">Taking design cues from Swiss design and typography, Square offers elegant, contemporary page layouts.</p>
-                </div>
-                <div class="col-md mb-0" data-aos="fade-up" data-aos-delay="100">
-                    <svg width="40" height="40" class=" mb-3" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><title>pen-write</title><path d="M19,13a1,1,0,0,0-1,1v7a1,1,0,0,1-1,1H3a1,1,0,0,1-1-1V3A1,1,0,0,1,3,2h7a1,1,0,0,0,0-2H3A3,3,0,0,0,0,3V21a3,3,0,0,0,3,3H17a3,3,0,0,0,3-3V14A1,1,0,0,0,19,13Z"/><path d="M8.73,12.521a.5.5,0,0,0-.353.361L7.82,15.119,6.568,16.371a.75.75,0,0,0,0,1.061.76.76,0,0,0,1.06,0L8.892,16.17l2.207-.555a.5.5,0,0,0,.36-.35.5.5,0,0,0-.127-.487L9.217,12.65A.5.5,0,0,0,8.73,12.521Z"/><path d="M23.707.293a1,1,0,0,0-1.414,0l-.9.9a2.011,2.011,0,0,0-1.533.208l-.052-.051a3,3,0,0,0-4.235.006L11.961,4.961a1,1,0,0,0,0,1.414,1.013,1.013,0,0,0,1.415,0L17,2.761a1,1,0,0,1,1.407.007l-.707.707a.5.5,0,0,0,0,.707L19.818,6.3a.5.5,0,0,0,.707,0l1.768-1.768a2,2,0,0,0,.517-1.93l.9-.9A1,1,0,0,0,23.707.293Z"/><path d="M12.4,14.22a.5.5,0,0,0,.353-.147l6.356-6.355a.5.5,0,0,0,0-.707L16.99,4.889a.514.514,0,0,0-.707,0L9.927,11.245a.5.5,0,0,0,0,.707l2.121,2.121A.5.5,0,0,0,12.4,14.22Z"/></svg>
-                    <h2 class="h5 mb-2">Detailed documentation</h2>
-                    <p class="font-size-5 mb-0">Extensive documentation covering all components and tools makes implementation as elegant as the design.</p>
-                </div> #}
+          
             </div>
             <div class="row justify-content-center">
                 <div class="col-md-6 mb-6 mb-md-0" data-aos="fade-up">
                     <div class="input-group px-lg-4">
-                        <input type="text" class="form-control border-0" placeholder="Enter your email" aria-label="Search for answers" aria-describedby="search-addon">
+                        <input id="emailGS" type="email" class="form-control border-0" placeholder="Enter your email" aria-label="Search for answers" aria-describedby="search-addon">
                         <div class="input-group-append">
+                            <a href="get-started.html">
                             <button class="btn btn-secondary text-uppercase px-3" type="button" id="search-addon">Get Started</button>
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -460,36 +445,6 @@ on your preferences</li>
         </div>
     </section>
 
-    {# <section class="py-6 py-lg-7">
-        <div class="container">
-            <div class="row justify-content-center text-center">
-                <div class="col-lg-8">
-                    <h2 class="h1">Build tools and documentation</h2>
-                    <p>Components, plugins, and build tools are all thoroughly documented with live examples and markup for easier use and customization.</p>
-                </div>
-                <div class="col-lg-6" data-aos="fade-up">
-                    <div class="bg-primary p-4 p-lg-6 mb-3 text-left font-size-6">
-                        <div class="mb-5">
-                            <span class="d-block text-white">&gt; $ npm install</span>
-                            <span class="d-block font-size-4 text-success">Everything installed!</span>
-                        </div>
-                        <div class="mb-5">
-                            <span class="d-block text-white">&gt; $ gulp</span>
-                            <span class="d-block font-size-4 text-success">BrowserSync started</span>
-                            <span class="d-block font-size-4 text-success">Opening localhost:3000</span>
-                            <span class="d-block font-size-4 text-success">watching files</span>
-                        </div>
-                        <div>
-                            <span class="d-block text-white">&gt; $ and?</span>
-                            <span class="d-block font-size-4 text-success">And now, it's done</span>
-                        </div>
-                    </div>
-
-                    <p class="small text-muted mb-0">Not comfortable diving that deep? <br class="d-none d-lg-block">No worries, just use the compiled CSS and example pages!</p>
-                </div>
-            </div>
-        </div>
-    </section> #}
 
     <section class="py-6 mt-6 py-lg-7 mt-lg-7">
         <div class="container">
@@ -498,7 +453,7 @@ on your preferences</li>
                     <h2 class="h3 mb-lg-0">It's never been easier to find job in the hospitality industry.</h2>
                 </div>
                 <div class="col text-center text-lg-left">
-                    <a href="https://themes.getbootstrap.com/product/square" target="_blank" rel="noopener" class="btn btn-secondary text-uppercase">Get started</a>
+                    <a href="get-started.html" target="_blank" rel="noopener" class="btn btn-secondary text-uppercase">Get started</a>
                 </div>
             </div>
         </div>
