--- a/src/templates/pricing.njk
+++ b/src/templates/pricing.njk
@@ -82,7 +82,7 @@
                                 <li class="p-2 bg-light" data-label="Marketing automation"><svg class="fill-gray" width="17" height="17" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><title>remove-bold</title><path d="M22.664,5.578a1.5,1.5,0,0,0,0-2.121L20.543,1.336a1.5,1.5,0,0,0-2.122,0L12.177,7.581a.251.251,0,0,1-.354,0L5.579,1.336a1.5,1.5,0,0,0-2.122,0L1.336,3.457a1.5,1.5,0,0,0,0,2.121l6.245,6.245a.252.252,0,0,1,0,.354L1.336,18.422a1.5,1.5,0,0,0,0,2.121l2.121,2.121a1.5,1.5,0,0,0,2.122,0l6.244-6.245a.251.251,0,0,1,.354,0l6.244,6.245a1.5,1.5,0,0,0,2.122,0l2.121-2.121a1.5,1.5,0,0,0,0-2.121l-6.245-6.245a.252.252,0,0,1,0-.354Z"/></svg></li>
                                 <li class="p-2" data-label="Hosting management"><svg class="fill-gray" width="17" height="17" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><title>remove-bold</title><path d="M22.664,5.578a1.5,1.5,0,0,0,0-2.121L20.543,1.336a1.5,1.5,0,0,0-2.122,0L12.177,7.581a.251.251,0,0,1-.354,0L5.579,1.336a1.5,1.5,0,0,0-2.122,0L1.336,3.457a1.5,1.5,0,0,0,0,2.121l6.245,6.245a.252.252,0,0,1,0,.354L1.336,18.422a1.5,1.5,0,0,0,0,2.121l2.121,2.121a1.5,1.5,0,0,0,2.122,0l6.244-6.245a.251.251,0,0,1,.354,0l6.244,6.245a1.5,1.5,0,0,0,2.122,0l2.121-2.121a1.5,1.5,0,0,0,0-2.121l-6.245-6.245a.252.252,0,0,1,0-.354Z"/></svg></li>
                             </ul> #}
-                            <a href="#" data-scroll class="btn btn-soft-secondary btn-block px-1">Start with Basic</a>
+                            <a href="https://employer.jobcore.co/" data-scroll class="btn btn-soft-secondary btn-block px-1">Start with Basic</a>
                         </div>
                     </div>
                 </div>
@@ -118,7 +118,7 @@
                                 <li class="p-2 bg-light" data-label="Marketing automation"><svg class="fill-gray" width="17" height="17" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><title>remove-bold</title><path d="M22.664,5.578a1.5,1.5,0,0,0,0-2.121L20.543,1.336a1.5,1.5,0,0,0-2.122,0L12.177,7.581a.251.251,0,0,1-.354,0L5.579,1.336a1.5,1.5,0,0,0-2.122,0L1.336,3.457a1.5,1.5,0,0,0,0,2.121l6.245,6.245a.252.252,0,0,1,0,.354L1.336,18.422a1.5,1.5,0,0,0,0,2.121l2.121,2.121a1.5,1.5,0,0,0,2.122,0l6.244-6.245a.251.251,0,0,1,.354,0l6.244,6.245a1.5,1.5,0,0,0,2.122,0l2.121-2.121a1.5,1.5,0,0,0,0-2.121l-6.245-6.245a.252.252,0,0,1,0-.354Z"/></svg></li>
                                 <li class="p-2" data-label="Hosting management"><svg class="fill-gray" width="17" height="17" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><title>remove-bold</title><path d="M22.664,5.578a1.5,1.5,0,0,0,0-2.121L20.543,1.336a1.5,1.5,0,0,0-2.122,0L12.177,7.581a.251.251,0,0,1-.354,0L5.579,1.336a1.5,1.5,0,0,0-2.122,0L1.336,3.457a1.5,1.5,0,0,0,0,2.121l6.245,6.245a.252.252,0,0,1,0,.354L1.336,18.422a1.5,1.5,0,0,0,0,2.121l2.121,2.121a1.5,1.5,0,0,0,2.122,0l6.244-6.245a.251.251,0,0,1,.354,0l6.244,6.245a1.5,1.5,0,0,0,2.122,0l2.121-2.121a1.5,1.5,0,0,0,0-2.121l-6.245-6.245a.252.252,0,0,1,0-.354Z"/></svg></li>
                             </ul> #}
-                            <a href="#" data-scroll class="btn btn-secondary btn-block px-1">Start with Pro</a>
+                            <a href="https://employer.jobcore.co/" data-scroll class="btn btn-secondary btn-block px-1">Start with Pro</a>
                         </div>
                     </div>
                 </div>
@@ -154,7 +154,7 @@
                                 <li class="p-2 bg-light" data-label="Marketing automation"><svg class="fill-gray" width="17" height="17" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><title>remove-bold</title><path d="M22.664,5.578a1.5,1.5,0,0,0,0-2.121L20.543,1.336a1.5,1.5,0,0,0-2.122,0L12.177,7.581a.251.251,0,0,1-.354,0L5.579,1.336a1.5,1.5,0,0,0-2.122,0L1.336,3.457a1.5,1.5,0,0,0,0,2.121l6.245,6.245a.252.252,0,0,1,0,.354L1.336,18.422a1.5,1.5,0,0,0,0,2.121l2.121,2.121a1.5,1.5,0,0,0,2.122,0l6.244-6.245a.251.251,0,0,1,.354,0l6.244,6.245a1.5,1.5,0,0,0,2.122,0l2.121-2.121a1.5,1.5,0,0,0,0-2.121l-6.245-6.245a.252.252,0,0,1,0-.354Z"/></svg></li>
                                 <li class="p-2" data-label="Hosting management"><svg class="fill-gray" width="17" height="17" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><title>remove-bold</title><path d="M22.664,5.578a1.5,1.5,0,0,0,0-2.121L20.543,1.336a1.5,1.5,0,0,0-2.122,0L12.177,7.581a.251.251,0,0,1-.354,0L5.579,1.336a1.5,1.5,0,0,0-2.122,0L1.336,3.457a1.5,1.5,0,0,0,0,2.121l6.245,6.245a.252.252,0,0,1,0,.354L1.336,18.422a1.5,1.5,0,0,0,0,2.121l2.121,2.121a1.5,1.5,0,0,0,2.122,0l6.244-6.245a.251.251,0,0,1,.354,0l6.244,6.245a1.5,1.5,0,0,0,2.122,0l2.121-2.121a1.5,1.5,0,0,0,0-2.121l-6.245-6.245a.252.252,0,0,1,0-.354Z"/></svg></li>
                             </ul> #}
-                            <a href="#" data-scroll class="btn btn-soft-secondary btn-block px-1">Start with Enterprise</a>
+                            <a href="https://employer.jobcore.co/" data-scroll class="btn btn-soft-secondary btn-block px-1">Start with Enterprise</a>
                         </div>
                     </div>
                 </div>
@@ -219,14 +219,15 @@
         <div class="container">
             <div class="row justify-content-center text-white">
                 <div class="col-md-8 col-xl-6 text-center">
-                    <h2>Try free for 30 days</h2>
-                    <div class="input-group">
+                    <h2>Try free for 30 days. Start Today</h2>
+                  
+                    {# <div class="input-group">
                         <input type="email" class="form-control border-0" placeholder="Email address" aria-label="Email address" aria-describedby="email-addon">
                         <div class="input-group-append">
                             <button class="btn btn-secondary text-uppercase px-3 px-lg-5" type="button" id="email-addon">Start today</button>
                         </div>
-                    </div>
-                    <p class="small text-muted mt-2 font-weight-lighter mb-0">By starting a free trial, you agree with our <a href="#" class="text-reset text-underline">Terms & Conditions</a></p>
+                    </div> #}
+                    <p class="small text-muted mt-2 font-weight-lighter mb-0">By starting a free trial, you agree with our <a href="./legal.html" class="text-reset text-underline">Terms & Conditions</a></p>
                 </div>
             </div>
         </div>
