fixing to deploy

--- a/src/templates/index.njk
+++ b/src/templates/index.njk
@@ -198,7 +198,7 @@
                                     <h3>Employer - Calendar</h3>
                                     <span>
                                         <picture>
-                                            <source srcset="../assets/images/frames/emp-calendar.png" type="image/png" style=>
+                                            <source srcset="../assets/images/frames/emp-calendar.png" type="image/png">
                                             <source srcset="../assets/images/frames/emp-calendar.png" type="image/png">
                                             <img src="../assets/images/frames/emp-calendar.png" alt="printscreen-07" class="img-fluid w-100 shadow" style="max-height: 650px">
                                         </picture>
@@ -208,7 +208,7 @@
                                     <h3>Employee</h3>
                                     <span>
                                         <picture>
-                                            <source srcset="../assets/images/frames/e-dashboard.png" type="image/png" style=>
+                                            <source srcset="../assets/images/frames/e-dashboard.png" type="image/png">
                                             <source srcset="../assets/images/frames/e-dashboard.png" type="image/png">
                                             <img src="../assets/images/frames/e-dashboard.png" alt="printscreen-07" class="img-fluid w-100 shadow" style="max-height: 650px">
                                         </picture>
@@ -240,7 +240,7 @@
             <div class="row align-items-center">
                 <div class="col-lg-6 col-xl-7 mb-7 mb-lg-0" data-aos="fade-right">
                     <picture>
-                        <source srcset="../assets/images/frames/emp-payroll.png" type="image/png" style=>
+                        <source srcset="../assets/images/frames/emp-payroll.png" type="image/png">
                         <source srcset="../assets/images/frames/emp-payroll.png" type="image/png">
                         <img src="../assets/images/frames/emp-payroll.png" alt="printscreen-07" class="img-fluid w-100 shadow">
                     </picture>
