JC-Beta Website

--- a/src/templates/employers.njk
+++ b/src/templates/employers.njk
@@ -32,7 +32,7 @@
                     {# <h1>Get <span class="font-weight-lighter" data-typed data-options='{"strings": ["work now", "paid the same day", "discovered "]}'></span></h1> #}
                     <h1>Welcome to the Future of Staffing & Payroll</h1>
                     <p>Access thousands of rated job seekers. </br> Streamline workforce scheduling. </br> Maximize productivity. Minimize expenses.</p>
-                    <a href="/get-started" data-scroll class="btn btn-primary text-uppercase d-inline-flex align-items-center">START A FREE TRIAL<svg width="16" height="16" class="ml-2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><title>arrow-down-1</title><path d="M12,19.5a2.3,2.3,0,0,1-1.729-.78L.46,7.568A1.847,1.847,0,0,1,3.233,5.129l8.579,9.752a.25.25,0,0,0,.376,0l8.579-9.752A1.847,1.847,0,1,1,23.54,7.568L13.732,18.716A2.31,2.31,0,0,1,12,19.5Z"/></svg></a>
+                    <a href="https://employer-web-client-iota-ashen.vercel.app/signup" data-scroll class="btn btn-primary text-uppercase d-inline-flex align-items-center">START A FREE TRIAL<svg width="16" height="16" class="ml-2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><title>arrow-down-1</title><path d="M12,19.5a2.3,2.3,0,0,1-1.729-.78L.46,7.568A1.847,1.847,0,0,1,3.233,5.129l8.579,9.752a.25.25,0,0,0,.376,0l8.579-9.752A1.847,1.847,0,1,1,23.54,7.568L13.732,18.716A2.31,2.31,0,0,1,12,19.5Z"/></svg></a>
                     
                 </div>
                 <div class="col-lg-6" data-aos="fade-left">
@@ -537,7 +537,7 @@
                                 <li class="mb-3"><svg class="fill-secondary mr-2" width="16" height="16" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><title>check</title><path d="M23.146,5.4,20.354,2.6a.5.5,0,0,0-.708,0L7.854,14.4a.5.5,0,0,1-.708,0L4.354,11.6a.5.5,0,0,0-.708,0L.854,14.4a.5.5,0,0,0,0,.707L7.146,21.4a.5.5,0,0,0,.708,0L23.146,6.1A.5.5,0,0,0,23.146,5.4Z"/></svg>Smart tracking and reports</li>
                                 <li class="mb-3"><svg class="fill-secondary mr-2" width="16" height="16" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><title>check</title><path d="M23.146,5.4,20.354,2.6a.5.5,0,0,0-.708,0L7.854,14.4a.5.5,0,0,1-.708,0L4.354,11.6a.5.5,0,0,0-.708,0L.854,14.4a.5.5,0,0,0,0,.707L7.146,21.4a.5.5,0,0,0,.708,0L23.146,6.1A.5.5,0,0,0,23.146,5.4Z"/></svg>Everything employers need in one platform!</li>
                             </ul>
-                            <a href="#" class="btn btn-primary text-uppercase d-inline-flex align-items-center">I'm interested<svg width="16" height="16" class="ml-2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><title>arrow-right-1</title><path d="M19.5,12a2.3,2.3,0,0,1-.78,1.729L7.568,23.54a1.847,1.847,0,0,1-2.439-2.773l9.752-8.579a.25.25,0,0,0,0-.376L5.129,3.233A1.847,1.847,0,0,1,7.568.46l11.148,9.808A2.31,2.31,0,0,1,19.5,12Z"/></svg></a>
+                            <a href="https://employer-web-client-iota-ashen.vercel.app/signup" class="btn btn-primary text-uppercase d-inline-flex align-items-center">I'm interested<svg width="16" height="16" class="ml-2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><title>arrow-right-1</title><path d="M19.5,12a2.3,2.3,0,0,1-.78,1.729L7.568,23.54a1.847,1.847,0,0,1-2.439-2.773l9.752-8.579a.25.25,0,0,0,0-.376L5.129,3.233A1.847,1.847,0,0,1,7.568.46l11.148,9.808A2.31,2.31,0,0,1,19.5,12Z"/></svg></a>
                             <p class="small text-dark mb-5 mb-lg-0">Haven't convinced you yet? <a href="#" class="text-underline">Get more info</a></p>
                         </div>
                         <div class="col-lg-5">
@@ -614,16 +614,17 @@
             </div>
         </div>
     </section>
-    <section class="py-6 py-lg-7">
+    <section class="py-6 py-lg-7 mb-7">
         <div class="container">
             <div class="row">
                 <div class="col">
                     <div class="row no-gutters">
                         <div class="col-12 text-center">
-                            <h2>Companies said about us</h2>
+                            <h2 class="mb-5">Companies said about us</h2>
                         </div>
-                        <div class="col-lg-7 pr-lg-6 position-relative z-index-1" data-aos="fade-up">
-                            <div class="card shadow mb-5">
+                        <div class="row justify-content-between">
+                            <div class="col-md-6" data-aos="fade-up" data-aos-delay="50">
+                            <div class="card shadow">
                                 <div class="card-body p-4 p-md-5 px-lg-7 py-lg-6">
                                     <blockquote class="blockquote mb-0">
                                         <h3 class="h4 text-body">Powerful tool for scheduling and finding staff.</h3>
@@ -634,8 +635,8 @@
                             </div>
                             {# <a href="#" class="font-size-6 font-weight-bold d-flex-inline d-none d-lg-block">Read all reviews<svg class="ml-2" width="14" height="14" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><title>arrow-button-right-1</title><path d="M13.584,12a2.643,2.643,0,0,1-.775,1.875L3.268,23.416a1.768,1.768,0,0,1-2.5-2.5l8.739-8.739a.25.25,0,0,0,0-.354L.768,3.084a1.768,1.768,0,0,1,2.5-2.5l9.541,9.541A2.643,2.643,0,0,1,13.584,12Z"></path><path d="M23.75,12a2.643,2.643,0,0,1-.775,1.875l-9.541,9.541a1.768,1.768,0,0,1-2.5-2.5l8.739-8.739a.25.25,0,0,0,0-.354L10.934,3.084a1.768,1.768,0,0,1,2.5-2.5l9.541,9.541A2.643,2.643,0,0,1,23.75,12Z"></path></svg></a> #}
                         </div>
-                        <div class="col-lg-6 ml-lg-n8 mt-lg-6" data-aos="fade-up" data-aos-delay="50">
-                            <div class="card bg-light shadow">
+                        <div class="col-md-6" data-aos="fade-up" data-aos-delay="50">
+                            <div class="card bg-light shadow mt-4 mt-md-0">
                                 <div class="card-body p-4 p-md-5 px-lg-7 py-lg-6">
                                     <blockquote class="blockquote mb-0">
                                         <h3 class="h4 text-body">Excellent software and very easy to use!</h3>
@@ -644,6 +645,7 @@
                                     </blockquote>
                                 </div>
                             </div>
+                        </div>
                         </div>
                     </div>
                 </div>
