--- a/src/templates/job-seekers.njk
+++ b/src/templates/job-seekers.njk
@@ -366,7 +366,7 @@
                     <h2 class="display-3 upper-line mb-3 mb-lg-6">Everything is<br/>done through the app</h2>
                     <a href="https://apps.apple.com/us/app/jobcore-talent/id1437290430?app=itunes&ign-mpt=uo%3D4" class="btn btn-white btn-lg text-uppercase d-inline-flex align-items-center">Download <svg xmlns="http://www.w3.org/2000/svg"width="18" height="18" class="ml-2" viewBox="0 0 384 512"><path d="M318.7 268.7c-.2-36.7 16.4-64.4 50-84.8-18.8-26.9-47.2-41.7-84.7-44.6-35.5-2.8-74.3 20.7-88.5 20.7-15 0-49.4-19.7-76.4-19.7C63.3 141.2 4 184.8 4 273.5q0 39.3 14.4 81.2c12.8 36.7 59 126.7 107.2 125.2 25.2-.6 43-17.9 75.8-17.9 31.8 0 48.3 17.9 76.4 17.9 48.6-.7 90.4-82.5 102.6-119.3-65.2-30.7-61.7-90-61.7-91.9zm-56.6-164.2c27.3-32.4 24.8-61.9 24-72.5-24.1 1.4-52 16.4-67.9 34.9-17.5 19.8-27.8 44.3-25.6 71.9 26.1 2 49.9-11.4 69.5-34.3z"/></svg>
                     
-                    <a href="https://play.google.com/store/apps/details?id=co.jobcore.talent&hl=en_US" class="btn btn-white btn-lg text-uppercase d-inline-flex align-items-center ml-4">Download<svg id="Bold" width="18" height="18" class="ml-2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><title>e-commerce-play-store</title><path d="M22,9.73l-1.87-.88a.5.5,0,0,0-.55.09l-2.83,2.65a.5.5,0,0,0,0,.73L19.62,15a.5.5,0,0,0,.55.09L22,14.25a2.5,2.5,0,0,0,0-4.53Z"/><path d="M2.61,22.77,13.73,12.34a.5.5,0,0,0,0-.73L2.5,1.23a2.48,2.48,0,0,0-.74.3A2.49,2.49,0,0,0,.6,3.64v16.7a2.49,2.49,0,0,0,1.16,2.11A2.48,2.48,0,0,0,2.61,22.77Z"/><path d="M17.79,8.53a.5.5,0,0,0-.13-.82L5.6,2l9.28,8.58a.5.5,0,0,0,.68,0Z"/><path d="M15.57,13.31a.5.5,0,0,0-.68,0L5.8,21.84l11.93-5.6a.5.5,0,0,0,.13-.82Z"/></svg></a>
+                    <a href="https://play.google.com/store/apps/details?id=co.jobcore.talent.beta" class="btn btn-white btn-lg text-uppercase d-inline-flex align-items-center ml-4">Download<svg id="Bold" width="18" height="18" class="ml-2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><title>e-commerce-play-store</title><path d="M22,9.73l-1.87-.88a.5.5,0,0,0-.55.09l-2.83,2.65a.5.5,0,0,0,0,.73L19.62,15a.5.5,0,0,0,.55.09L22,14.25a2.5,2.5,0,0,0,0-4.53Z"/><path d="M2.61,22.77,13.73,12.34a.5.5,0,0,0,0-.73L2.5,1.23a2.48,2.48,0,0,0-.74.3A2.49,2.49,0,0,0,.6,3.64v16.7a2.49,2.49,0,0,0,1.16,2.11A2.48,2.48,0,0,0,2.61,22.77Z"/><path d="M17.79,8.53a.5.5,0,0,0-.13-.82L5.6,2l9.28,8.58a.5.5,0,0,0,.68,0Z"/><path d="M15.57,13.31a.5.5,0,0,0-.68,0L5.8,21.84l11.93-5.6a.5.5,0,0,0,.13-.82Z"/></svg></a>
                 
                 </div>
                 <div class="col" data-aos="fade-left">
@@ -378,11 +378,11 @@
         </div>
     </section>
 
-        <section class="py-6 mt-6 py-lg-7 mt-lg-7 mb-4">
+        <section class="py-6 mt-6 py-lg-7 mt-lg-7 d-none">
         <div class="container">
             <div class="row justify-content-center align-items-center">
                 <div class="col text-center">
-                    <h2 class="h3 mb-lg-0">Google Reviews</h2>
+                    <h2 class="h3 mb-lg-0 d-none">Google Reviews</h2>
                 </div>
                 {# <div class="col text-center text-lg-left">
                     <a href="get-started.html" target="_blank" rel="noopener" class="btn btn-secondary text-uppercase">START A FREE TRIAL</a>
@@ -402,49 +402,51 @@
         </div>
     </section>
 
-    <section class="pt-6 pb-5 mb-6 pt-lg-7 pb-lg-6 mb-lg-7 bg-layer-light-top-100-left-60 position-relative overflow-hidden">
-        <div class="container-fluid px-0">
-            <div class="row">
-                <div class="col">
-                    <div class="swiper container">
-                        <div class="swiper-container swiper-scaled overflow-visible" data-options='{"hashNavigation": {"watchState": true}}'>
-                            <div class="swiper-wrapper">
-                                <div class="swiper-slide">
-                                    <h3>Employee - Profile View</h3>
-                                    <span>
-                                        <picture>
-                                          <source srcset="../assets/images/frames/e-profile.png" type="image/png">
+    <div class="mb-9">
+        <section class="pt-6 pb-5 mb-6 pb-5 pt-lg-7 pb-lg-6 mb-lg-7 bg-layer-light-top-100-left-60 position-relative overflow-hidden">
+            <div class="container-fluid px-0">
+                <div class="row">
+                    <div class="col">
+                        <div class="swiper container">
+                            <div class="swiper-container swiper-scaled overflow-visible" data-options='{"hashNavigation": {"watchState": true}}'>
+                                <div class="swiper-wrapper">
+                                    <div class="swiper-slide">
+                                        <h3>Employee - Profile View</h3>
+                                        <span>
+                                            <picture>
                                             <source srcset="../assets/images/frames/e-profile.png" type="image/png">
-                                            <img src="../assets/images/frames/e-profile.png" alt="printscreen-07" class="img-fluid w-100 shadow">
-                                        </picture>
-                                    </span>
+                                                <source srcset="../assets/images/frames/e-profile.png" type="image/png">
+                                                <img src="../assets/images/frames/e-profile.png" alt="printscreen-07" class="img-fluid w-100 shadow">
+                                            </picture>
+                                        </span>
+                                    </div>
+                                    <div class="swiper-slide">
+                                        <h3>Employee - Jobs View</h3>
+                                        <span>
+                                            <picture>
+                                                <source srcset="../assets/images/frames/e-dashboard.png" type="image/png">
+                                                <source srcset="../assets/images/frames/e-dashboard.png" type="image/png">
+                                                <img src="../assets/images/frames/e-dashboard.png" alt="printscreen-07" class="img-fluid w-100 shadow">
+                                            </picture>
+                                        </span>
+                                    </div>
+                            
+                                
+                
                                 </div>
-                                <div class="swiper-slide">
-                                    <h3>Employee - Jobs View</h3>
-                                    <span>
-                                        <picture>
-                                            <source srcset="../assets/images/frames/e-dashboard.png" type="image/png">
-                                            <source srcset="../assets/images/frames/e-dashboard.png" type="image/png">
-                                            <img src="../assets/images/frames/e-dashboard.png" alt="printscreen-07" class="img-fluid w-100 shadow">
-                                        </picture>
-                                    </span>
-                                </div>
-                          
-                              
-            
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-        </div>
-        <div class="container mt-4">
-            <div class="d-flex justify-content-end">
-                <div class="swiper-btn swiper-btn-prev" tabindex="0" role="button" aria-label="Previous slide"></div>
-                <div class="swiper-btn swiper-btn-next ml-3" tabindex="0" role="button" aria-label="Next slide"></div>
+            <div class="container mt-4">
+                <div class="d-flex justify-content-end">
+                    <div class="swiper-btn swiper-btn-prev" tabindex="0" role="button" aria-label="Previous slide"></div>
+                    <div class="swiper-btn swiper-btn-next ml-3" tabindex="0" role="button" aria-label="Next slide"></div>
+                </div>
             </div>
-        </div>
-    </section>
+        </section>
+    </div>
 
  <section class="bg-primary py-6 mt-6 py-lg-7 mt-lg-7 text-white">
         <div class="container">
@@ -467,7 +469,7 @@
                 </div>
                 <div class="col-lg-6 text-center text-lg-left">
                     <a href="https://apps.apple.com/us/app/jobcore-talent/id1437290430?app=itunes&ign-mpt=uo%3D4" class="btn btn-secondary btn-lg text-uppercase d-inline-flex align-items-center mr-2">Download <svg xmlns="http://www.w3.org/2000/svg"width="18" height="18" class="ml-2" viewBox="0 0 384 512"><path d="M318.7 268.7c-.2-36.7 16.4-64.4 50-84.8-18.8-26.9-47.2-41.7-84.7-44.6-35.5-2.8-74.3 20.7-88.5 20.7-15 0-49.4-19.7-76.4-19.7C63.3 141.2 4 184.8 4 273.5q0 39.3 14.4 81.2c12.8 36.7 59 126.7 107.2 125.2 25.2-.6 43-17.9 75.8-17.9 31.8 0 48.3 17.9 76.4 17.9 48.6-.7 90.4-82.5 102.6-119.3-65.2-30.7-61.7-90-61.7-91.9zm-56.6-164.2c27.3-32.4 24.8-61.9 24-72.5-24.1 1.4-52 16.4-67.9 34.9-17.5 19.8-27.8 44.3-25.6 71.9 26.1 2 49.9-11.4 69.5-34.3z"/></svg>
-                    <a href="https://play.google.com/store/apps/details?id=co.jobcore.talent&hl=en_US" class="btn btn-secondary btn-lg text-uppercase d-inline-flex align-items-center">Download<svg id="Bold" width="18" height="18" class="ml-2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><title>e-commerce-play-store</title><path d="M22,9.73l-1.87-.88a.5.5,0,0,0-.55.09l-2.83,2.65a.5.5,0,0,0,0,.73L19.62,15a.5.5,0,0,0,.55.09L22,14.25a2.5,2.5,0,0,0,0-4.53Z"/><path d="M2.61,22.77,13.73,12.34a.5.5,0,0,0,0-.73L2.5,1.23a2.48,2.48,0,0,0-.74.3A2.49,2.49,0,0,0,.6,3.64v16.7a2.49,2.49,0,0,0,1.16,2.11A2.48,2.48,0,0,0,2.61,22.77Z"/><path d="M17.79,8.53a.5.5,0,0,0-.13-.82L5.6,2l9.28,8.58a.5.5,0,0,0,.68,0Z"/><path d="M15.57,13.31a.5.5,0,0,0-.68,0L5.8,21.84l11.93-5.6a.5.5,0,0,0,.13-.82Z"/></svg></a>
+                    <a href="https://play.google.com/store/apps/details?id=co.jobcore.talent.beta" class="btn btn-secondary btn-lg text-uppercase d-inline-flex align-items-center">Download<svg id="Bold" width="18" height="18" class="ml-2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><title>e-commerce-play-store</title><path d="M22,9.73l-1.87-.88a.5.5,0,0,0-.55.09l-2.83,2.65a.5.5,0,0,0,0,.73L19.62,15a.5.5,0,0,0,.55.09L22,14.25a2.5,2.5,0,0,0,0-4.53Z"/><path d="M2.61,22.77,13.73,12.34a.5.5,0,0,0,0-.73L2.5,1.23a2.48,2.48,0,0,0-.74.3A2.49,2.49,0,0,0,.6,3.64v16.7a2.49,2.49,0,0,0,1.16,2.11A2.48,2.48,0,0,0,2.61,22.77Z"/><path d="M17.79,8.53a.5.5,0,0,0-.13-.82L5.6,2l9.28,8.58a.5.5,0,0,0,.68,0Z"/><path d="M15.57,13.31a.5.5,0,0,0-.68,0L5.8,21.84l11.93-5.6a.5.5,0,0,0,.13-.82Z"/></svg></a>
 
                 </div>
             </div>
