--- a/src/templates/layouts/_header.njk
+++ b/src/templates/layouts/_header.njk
@@ -65,7 +65,7 @@
 
                 <!-- Buy button -->
                 <a class="btn btn-sm btn-secondary text-uppercase mt-3 mt-lg-0 ml-lg-4 d-block d-lg-inline-block" href="./get-started.html" target="_blank" rel="noopener">Get started</a>
-                <a class="btn btn-sm btn-light text-uppercase mt-3 mt-lg-0 ml-lg-4 d-block d-lg-inline-block" href="./sign-in.html.html" target="_blank" rel="noopener">Log In</a>
+                <a class="btn btn-sm btn-light text-uppercase mt-3 mt-lg-0 ml-lg-4 d-block d-lg-inline-block" href="https://employer-web-client-iota-ashen.vercel.app/login" target="_blank" rel="noopener">Log In</a>
             </div>
         {% endif %}
     </div>
