--- a/src/templates/pricing.njk
+++ b/src/templates/pricing.njk
@@ -176,35 +176,35 @@
                 </div>
             </div>
 
-            <div class="row justify-content-center">
+            <div class="row justify-content-center mb-6">
                 <div class="col-lg-10">
                     <div class="row">
                         <div class="col-lg-6">
                             <div data-aos="fade-right">
                                 <h3 class="h6 text-uppercase">Do I have to pay for the test period?</h3>
-                                <p class="font-size-6 mb-6">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus euismod nibh sem, congue iaculis orci vel.</p>
+                                <p class="font-size-6 mb-6">No, the test period is free.</p>
                             </div>
                             <div data-aos="fade-right" data-aos-delay="50">
                                 <h3 class="h6 text-uppercase">What are the total payments?</h3>
-                                <p class="font-size-6 mb-6">Nunc finibus ex auctor nisl imperdiet bibendum. Praesent aliquet sapien non ex pharetra, accumsan consequat.</p>
+                                <p class="font-size-6 mb-6">You get billed on a monthly basis, this means you can stop paying at any month.</p>
                             </div>
                             <div data-aos="fade-right" data-aos-delay="100">     
                                 <h3 class="h6 text-uppercase">Do I need to have a credit card?</h3>
-                                <p class="font-size-6 mb-6">Nam interdum magna at sem rhoncus mollis. Integer feugiat lorem at lorem pellentesque, ac mi pretium.</p>
+                                <p class="font-size-6 mb-6">You do need a credit card or debit card to pay the subscription fee.</p>
                             </div>
                         </div>
                         <div class="col-lg-6">
                             <div data-aos="fade-left">
                                 <h3 class="h6 text-uppercase">What happens when the trial period is over?</h3>
-                                <p class="font-size-6 mb-6">Donec sit amet est nec ligula pharetra placerat. In rhoncus libero ipsum, vel varius arcu posuere in.</p>
+                                <p class="font-size-6 mb-5">Your card will automatically start getting charged for the price of the plan you chose.</p>
                             </div>
                             <div data-aos="fade-left" data-aos-delay="50">
                                 <h3 class="h6 text-uppercase">Do I have to sign a contract?</h3>
-                                <p class="font-size-6 mb-6">Nunc ultrices quam hendrerit neque tempor, vitae porttitor dui porttitor. Donec augue volutpat mollis.</p>
+                                <p class="font-size-6 mb-6">No, you do not need to sign any contract.</p>
                             </div>
                             <div data-aos="fade-left" data-aos-delay="100">
                                 <h3 class="h6 text-uppercase">When and how can I quit using it?</h3>
-                                <p class="font-size-6 mb-7">Donec vitae velit aliquam, pretium purus quis ligula. Duis a justo non neque suscipit feugiat in ut metus.</p>
+                                <p class="font-size-6 mb-7">Please contact us at support@jobcore.co to help you stop the payments.</p>
                             </div>
                         </div>
                     </div>
