--- a/src/templates/about.njk
+++ b/src/templates/about.njk
@@ -149,7 +149,7 @@
         </div>
     </section>
 
-    <section class="py-6 my-6 py-lg-7 my-lg-7 bg-light">
+    <section class="mb-10 py-6 mt-6 py-lg-7 mt-lg-7 bg-light">
         <div class="container-fluid px-0">
             <div class="row no-gutters">
                 <div class="col-lg-6">
