--- a/src/templates/app.njk
+++ b/src/templates/app.njk
@@ -344,16 +344,17 @@
         </div>
     </section>
 
-    <section class="py-6 py-lg-7">
+    <section class="py-6 py-lg-7 mb-7">
         <div class="container">
             <div class="row">
                 <div class="col">
                     <div class="row no-gutters">
                         <div class="col-12 text-center">
-                            <h2>Companies said about us</h2>
+                            <h2 class="mb-5">Companies said about us</h2>
                         </div>
-                        <div class="col-lg-7 pr-lg-6 position-relative z-index-1" data-aos="fade-up">
-                            <div class="card shadow mb-5">
+                        <div class="row justify-content-between">
+                            <div class="col-md-6" data-aos="fade-up" data-aos-delay="50">
+                            <div class="card shadow">
                                 <div class="card-body p-4 p-md-5 px-lg-7 py-lg-6">
                                     <blockquote class="blockquote mb-0">
                                         <h3 class="h4 text-body">Powerful tool for scheduling and finding staff.</h3>
@@ -364,8 +365,8 @@
                             </div>
                             {# <a href="#" class="font-size-6 font-weight-bold d-flex-inline d-none d-lg-block">Read all reviews<svg class="ml-2" width="14" height="14" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><title>arrow-button-right-1</title><path d="M13.584,12a2.643,2.643,0,0,1-.775,1.875L3.268,23.416a1.768,1.768,0,0,1-2.5-2.5l8.739-8.739a.25.25,0,0,0,0-.354L.768,3.084a1.768,1.768,0,0,1,2.5-2.5l9.541,9.541A2.643,2.643,0,0,1,13.584,12Z"></path><path d="M23.75,12a2.643,2.643,0,0,1-.775,1.875l-9.541,9.541a1.768,1.768,0,0,1-2.5-2.5l8.739-8.739a.25.25,0,0,0,0-.354L10.934,3.084a1.768,1.768,0,0,1,2.5-2.5l9.541,9.541A2.643,2.643,0,0,1,23.75,12Z"></path></svg></a> #}
                         </div>
-                        <div class="col-lg-6 ml-lg-n8 mt-lg-6" data-aos="fade-up" data-aos-delay="50">
-                            <div class="card bg-light shadow">
+                        <div class="col-md-6" data-aos="fade-up" data-aos-delay="50">
+                            <div class="card bg-light shadow mt-4 mt-md-0">
                                 <div class="card-body p-4 p-md-5 px-lg-7 py-lg-6">
                                     <blockquote class="blockquote mb-0">
                                         <h3 class="h4 text-body">Excellent software and very easy to use!</h3>
@@ -374,6 +375,7 @@
                                     </blockquote>
                                 </div>
                             </div>
+                        </div>
                         </div>
                     </div>
                 </div>
