--- a/src/templates/faqs.njk
+++ b/src/templates/faqs.njk
@@ -69,7 +69,7 @@
             <div class="row justify-content-center">
                 <div class="col-lg-8 text-center">
                     <h2>Frequent Asked Questions</h2>
-                    <p>Fusce ullamcorper nisi congue, suscipit neque in, dictum turpis. <br class="d-none d-md-block">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                    <p class="font-size-4">How can we help you?</p>
                 </div>
                 <div class="col-lg-10">
                     <div class="accordion" id="accordionFAQs">
@@ -148,6 +148,7 @@
                                 </div>
                             </div>
                         </div>
+
                         <div class="card">
                             <div class="card-header p-0 bg-white border-bottom" id="heading5">
                                 <h3 class="h4 mb-0">
@@ -166,6 +167,7 @@
                                 </div>
                             </div>
                         </div>
+
                         <div class="card">
                             <div class="card-header p-0 bg-white border-bottom" id="heading6">
                                 <h3 class="h4 mb-0">
@@ -200,6 +202,7 @@
                                 </div>
                             </div>
                         </div>
+
                         <div class="card">
                             <div class="card-header p-0 bg-white border-bottom" id="heading7">
                                 <h3 class="h4 mb-0">
@@ -218,6 +221,7 @@
                                 </div>
                             </div>
                         </div>
+
                         <div class="card">
                             <div class="card-header p-0 bg-white border-bottom" id="heading8">
                                 <h3 class="h4 mb-0">
@@ -236,6 +240,7 @@
                                 </div>
                             </div>
                         </div>
+
                         <div class="card">
                             <div class="card-header p-0 bg-white border-bottom" id="heading9">
                                 <h3 class="h4 mb-0">
@@ -254,10 +259,11 @@
                                 </div>
                             </div>
                         </div>
+
                         <div class="card">
-                            <div class="card-header p-0 bg-white border-bottom" id="heading9">
+                            <div class="card-header p-0 bg-white border-bottom" id="heading10">
                                 <h3 class="h4 mb-0">
-                                    <button class="btn btn-block d-flex font-weight-bold font-size-4 text-left rounded-0 px-4 px-lg-5 py-lg-4 collapsed" type="button" data-toggle="collapse" data-target="#collapse9" aria-expanded="false" aria-controls="collapse9">
+                                    <button class="btn btn-block d-flex font-weight-bold font-size-4 text-left rounded-0 px-4 px-lg-5 py-lg-4 collapsed" type="button" data-toggle="collapse" data-target="#collapse10" aria-expanded="false" aria-controls="collapse9">
                                         HOW DO I GET NOTIFIED OF NEW JOBS?
                                         <span class="collapse-arrow d-flex ml-auto">
                                             <svg width="16" height="16" class="text-muted" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><title>arrow-down-1</title><path d="M12,19.5a2.3,2.3,0,0,1-1.729-.78L.46,7.568A1.847,1.847,0,0,1,3.233,5.129l8.579,9.752a.25.25,0,0,0,.376,0l8.579-9.752A1.847,1.847,0,1,1,23.54,7.568L13.732,18.716A2.31,2.31,0,0,1,12,19.5Z"/></svg>
@@ -266,16 +272,17 @@
                                 </h3>
                             </div>
 
-                            <div id="collapse9" class="collapse" aria-labelledby="heading9" data-parent="#accordionFAQs">
+                            <div id="collapse10" class="collapse" aria-labelledby="heading10" data-parent="#accordionFAQs">
                                 <div class="card-body bg-light border-bottom px-4 px-lg-5 font-size-5">
                                 <p>We’ll send you push notifications directly to your mobile device when a new employer within your preferences is looking for shifts. Make sure you head to your device settings and turn them on for the JobCore app.  These notifications will also tell you when to clock in/out of your shifts, when a business leaves you a review, and when your payment has been disbursed.</p>
                                 </div>
                             </div>
                         </div>
+
                         <div class="card">
-                            <div class="card-header p-0 bg-white border-bottom" id="heading9">
+                            <div class="card-header p-0 bg-white border-bottom" id="heading11">
                                 <h3 class="h4 mb-0">
-                                    <button class="btn btn-block d-flex font-weight-bold font-size-4 text-left rounded-0 px-4 px-lg-5 py-lg-4 collapsed" type="button" data-toggle="collapse" data-target="#collapse9" aria-expanded="false" aria-controls="collapse9">
+                                    <button class="btn btn-block d-flex font-weight-bold font-size-4 text-left rounded-0 px-4 px-lg-5 py-lg-4 collapsed" type="button" data-toggle="collapse" data-target="#collapse10" aria-expanded="false" aria-controls="collapse11">
                                         CONTACT SUPPORT
                                         <span class="collapse-arrow d-flex ml-auto">
                                             <svg width="16" height="16" class="text-muted" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><title>arrow-down-1</title><path d="M12,19.5a2.3,2.3,0,0,1-1.729-.78L.46,7.568A1.847,1.847,0,0,1,3.233,5.129l8.579,9.752a.25.25,0,0,0,.376,0l8.579-9.752A1.847,1.847,0,1,1,23.54,7.568L13.732,18.716A2.31,2.31,0,0,1,12,19.5Z"/></svg>
@@ -284,7 +291,7 @@
                                 </h3>
                             </div>
 
-                            <div id="collapse9" class="collapse" aria-labelledby="heading9" data-parent="#accordionFAQs">
+                            <div id="collapse11" class="collapse" aria-labelledby="heading11" data-parent="#accordionFAQs">
                                 <div class="card-body bg-light border-bottom px-4 px-lg-5 font-size-5">
                                 <p>Our Support Team is available M-F 10am – 6pm EST. If you run into any issues, they can be reached directly at PHONE # or via Live Chat.</p>
                                 </div>
@@ -303,25 +310,31 @@
                     <div class="row justify-content-center no-gutters">
                         <div class="col-12 text-center">
                             <h2>You still have questions?</h2>
-                            <p>Fusce ullamcorper nisi congue, suscipit neque in, dictum turpis. <br class="d-none d-md-block">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                            <p class="font-size-4">Give us a call</p>
                         </div>
-                        <div class="col-md-7 pr-md-7 col-lg-6 pr-lg-6 position-relative z-index-1" data-aos="fade-up">
-                            <div class="card shadow text-secondary mb-5 lift">
-                                <div class="card-body p-5 px-lg-7 py-lg-6 text-center">
-                                    <svg width="45" height="45" class="mb-3" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><title>phone-actions-24-support</title><path d="M17.169,16.163a2.5,2.5,0,0,0-3.536,0l-.386.385a46.9,46.9,0,0,1-5.789-5.789l.386-.386a2.5,2.5,0,0,0,0-3.535L5.721,4.717a2.556,2.556,0,0,0-3.535,0L1.022,5.881a3.507,3.507,0,0,0-.441,4.4A46.945,46.945,0,0,0,13.722,23.426a3.549,3.549,0,0,0,4.4-.443l1.164-1.164a2.5,2.5,0,0,0,0-3.535Z"/><path d="M23,.007A5.694,5.694,0,0,0,17.31,5.694v.938a1,1,0,0,0,1,1H22v.875a1,1,0,1,0,2,0v-7.5A1,1,0,0,0,23,.007ZM22,5.632H19.311A3.7,3.7,0,0,1,22,2.144Z"/><path d="M11.279,4.35a1,1,0,0,0,1-1,1.344,1.344,0,0,1,2.661-.269c.136.674-.032.892-.952,1.7L10.617,7.757a1,1,0,0,0,.662,1.75h5.156a1,1,0,0,0,0-2H13.924l1.385-1.223c.924-.812,1.97-1.734,1.591-3.6a3.344,3.344,0,0,0-6.621.668A1,1,0,0,0,11.279,4.35Z"/></svg>
-                                    <h3 class="mb-0"><a href="#">(+1) 305-667-6668</a></h3>
-                                    <p class="font-size-5 text-muted mb-0">Available in 24/7</p>
+
+                        <div class="row justify-content-between">
+
+                            <div class="col-md-6" data-aos="fade-up" data-aos-delay="50">
+                                <div class="card shadow lift text-secondary">
+                                    <div class="card-body p-5 px-lg-7 py-lg-6 text-center">
+                                        <svg width="45" height="45" class="mb-3" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><title>phone-actions-24-support</title><path d="M17.169,16.163a2.5,2.5,0,0,0-3.536,0l-.386.385a46.9,46.9,0,0,1-5.789-5.789l.386-.386a2.5,2.5,0,0,0,0-3.535L5.721,4.717a2.556,2.556,0,0,0-3.535,0L1.022,5.881a3.507,3.507,0,0,0-.441,4.4A46.945,46.945,0,0,0,13.722,23.426a3.549,3.549,0,0,0,4.4-.443l1.164-1.164a2.5,2.5,0,0,0,0-3.535Z"/><path d="M23,.007A5.694,5.694,0,0,0,17.31,5.694v.938a1,1,0,0,0,1,1H22v.875a1,1,0,1,0,2,0v-7.5A1,1,0,0,0,23,.007ZM22,5.632H19.311A3.7,3.7,0,0,1,22,2.144Z"/><path d="M11.279,4.35a1,1,0,0,0,1-1,1.344,1.344,0,0,1,2.661-.269c.136.674-.032.892-.952,1.7L10.617,7.757a1,1,0,0,0,.662,1.75h5.156a1,1,0,0,0,0-2H13.924l1.385-1.223c.924-.812,1.97-1.734,1.591-3.6a3.344,3.344,0,0,0-6.621.668A1,1,0,0,0,11.279,4.35Z"/></svg>
+                                        <h3 class="mb-0"><a href="#">(+1) 305-667-6668</a></h3>
+                                        <p class="font-size-5 text-muted mb-0">Available in 24/7</p>
+                                    </div>
                                 </div>
                             </div>
-                        </div>
-                        <div class="col-md-6 ml-md-n8 mt-md-5 col-lg-5 ml-lg-n8 mt-lg-6" data-aos="fade-up" data-aos-delay="50">
-                            <div class="card bg-light shadow lift">
-                                <div class="card-body p-5 px-lg-7 py-lg-6 text-center">
-                                    <svg width="45" height="45" class="mb-3" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><title>email-action-at</title><path d="M18.409,15.131A.758.758,0,0,1,18,15.25H6a.757.757,0,0,1-.405-.119L.385,11.781a.25.25,0,0,0-.385.21V22a2,2,0,0,0,2,2H22a2,2,0,0,0,2-2V12a.25.25,0,0,0-.385-.211Z"/><path d="M5.12,13.041a.25.25,0,0,0,.385-.21L5.5,2.25A.249.249,0,0,1,5.75,2h12.5a.25.25,0,0,1,.25.25l.01,10.575a.25.25,0,0,0,.385.21l4.053-2.607a.248.248,0,0,0,.115-.206.251.251,0,0,0-.107-.21L20.5,8.3l0-6.093a2.114,2.114,0,0,0-2-2.208H5.5a2.115,2.115,0,0,0-2,2.209L3.5,8.3l-2.458,1.71a.249.249,0,0,0,.007.415Z"/><path d="M7.375,9.6a4.7,4.7,0,0,0,3.51,3.52A4.973,4.973,0,0,0,12,13.251a4.716,4.716,0,0,0,1.221-.16.75.75,0,1,0-.386-1.449,3.343,3.343,0,0,1-1.616.018A3.231,3.231,0,0,1,8.837,9.27a3.286,3.286,0,0,1,.648-2.829,3.207,3.207,0,0,1,2.6-1.19A3.37,3.37,0,0,1,15.25,8.686V9.25a.5.5,0,0,1-1,0V8.5A2.25,2.25,0,1,0,12,10.75a2.225,2.225,0,0,0,1.142-.322A1.995,1.995,0,0,0,16.75,9.25V8.686a4.879,4.879,0,0,0-4.627-4.935,4.723,4.723,0,0,0-3.8,1.739A4.774,4.774,0,0,0,7.375,9.6ZM12,9.25a.75.75,0,1,1,.75-.75A.75.75,0,0,1,12,9.25Z"/></svg>
-                                    <h3 class="mb-0"><a href="#" class="text-reset">support@jobcore.co</a></h3>
-                                    <p class="font-size-5 text-muted mb-0">Happy to help</p>
+
+                            <div class="col-md-6 mt-4 mt-md-0" data-aos="fade-up" data-aos-delay="50">
+                                <div class="card shadow lift">
+                                    <div class="card-body p-5 px-lg-7 py-lg-6 text-center">
+                                        <svg width="45" height="45" class="mb-3" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><title>email-action-at</title><path d="M18.409,15.131A.758.758,0,0,1,18,15.25H6a.757.757,0,0,1-.405-.119L.385,11.781a.25.25,0,0,0-.385.21V22a2,2,0,0,0,2,2H22a2,2,0,0,0,2-2V12a.25.25,0,0,0-.385-.211Z"/><path d="M5.12,13.041a.25.25,0,0,0,.385-.21L5.5,2.25A.249.249,0,0,1,5.75,2h12.5a.25.25,0,0,1,.25.25l.01,10.575a.25.25,0,0,0,.385.21l4.053-2.607a.248.248,0,0,0,.115-.206.251.251,0,0,0-.107-.21L20.5,8.3l0-6.093a2.114,2.114,0,0,0-2-2.208H5.5a2.115,2.115,0,0,0-2,2.209L3.5,8.3l-2.458,1.71a.249.249,0,0,0,.007.415Z"/><path d="M7.375,9.6a4.7,4.7,0,0,0,3.51,3.52A4.973,4.973,0,0,0,12,13.251a4.716,4.716,0,0,0,1.221-.16.75.75,0,1,0-.386-1.449,3.343,3.343,0,0,1-1.616.018A3.231,3.231,0,0,1,8.837,9.27a3.286,3.286,0,0,1,.648-2.829,3.207,3.207,0,0,1,2.6-1.19A3.37,3.37,0,0,1,15.25,8.686V9.25a.5.5,0,0,1-1,0V8.5A2.25,2.25,0,1,0,12,10.75a2.225,2.225,0,0,0,1.142-.322A1.995,1.995,0,0,0,16.75,9.25V8.686a4.879,4.879,0,0,0-4.627-4.935,4.723,4.723,0,0,0-3.8,1.739A4.774,4.774,0,0,0,7.375,9.6ZM12,9.25a.75.75,0,1,1,.75-.75A.75.75,0,0,1,12,9.25Z"/></svg>
+                                        <h3 class="mb-0"><a href="#" class="text-reset text-nowrap">support@jobcore.co</a></h3>
+                                        <p class="font-size-5 text-muted mb-0">Happy to help</p>
+                                    </div>
                                 </div>
                             </div>
+
                         </div>
                     </div>
                 </div>
