--- a/src/templates/index.njk
+++ b/src/templates/index.njk
@@ -16,7 +16,7 @@
                     <p class="mb-6">Are you a Job Seeker on an Employer?</p>
             
                     <a href="/job-seekers" data-scroll class="btn btn-primary text-uppercase d-inline-flex align-items-center mr-3">JOB SEEKER<svg width="16" height="16" class="ml-2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><title>arrow-right-1</title><path d="M19.5,12a2.3,2.3,0,0,1-.78,1.729L7.568,23.54a1.847,1.847,0,0,1-2.439-2.773l9.752-8.579a.25.25,0,0,0,0-.376L5.129,3.233A1.847,1.847,0,0,1,7.568.46l11.148,9.808A2.31,2.31,0,0,1,19.5,12Z"></path></svg></a>
-                    <a href="/employers" data-scroll class="btn btn-secondary text-uppercase d-inline-flex align-items-center">EMPLOYER<svg width="16" height="16" class="ml-2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><title>arrow-right-1</title><path d="M19.5,12a2.3,2.3,0,0,1-.78,1.729L7.568,23.54a1.847,1.847,0,0,1-2.439-2.773l9.752-8.579a.25.25,0,0,0,0-.376L5.129,3.233A1.847,1.847,0,0,1,7.568.46l11.148,9.808A2.31,2.31,0,0,1,19.5,12Z"></path></svg></a>
+                    <a href="https://employer-web-client-iota-ashen.vercel.app/signup" data-scroll class="btn btn-secondary text-uppercase d-inline-flex align-items-center">EMPLOYER<svg width="16" height="16" class="ml-2" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><title>arrow-right-1</title><path d="M19.5,12a2.3,2.3,0,0,1-.78,1.729L7.568,23.54a1.847,1.847,0,0,1-2.439-2.773l9.752-8.579a.25.25,0,0,0,0-.376L5.129,3.233A1.847,1.847,0,0,1,7.568.46l11.148,9.808A2.31,2.31,0,0,1,19.5,12Z"></path></svg></a>
                 </div>
                 <div class="col-lg-5 pt-12 d-none d-sm-block" data-aos="fade-left">
                     <div class="img-shifted img-shifted-with-edge shift-right vh-75">
@@ -574,7 +574,7 @@ on your preferences</li>
 
     
 
-     <section class="py-6 py-lg-7">
+     <section class="py-6 py-lg-7 mb-5">
         <div class="container">
             <h2 class="h1 text-center mb-3">Employers Can Manage Talent & Payroll</h2>
 
@@ -677,11 +677,12 @@ on your preferences</li>
             </div>
         </div>
     </section> #}
-    <section class="py-6 mt-6 py-lg-7 mt-lg-7 mb-4">
+    <section class="py-6 mt-6 py-lg-7 mt-lg-7 d-none">
         <div class="container">
             <div class="row justify-content-center align-items-center">
                 <div class="col text-center">
                     <h2 class="h3 mb-lg-0">Google Reviews</h2>
+                </div>
                 </div>
                 {# <div class="col text-center text-lg-left">
                     <a href="get-started.html" target="_blank" rel="noopener" class="btn btn-secondary text-uppercase">START A FREE TRIAL</a>
