--- a/src/templates/password-reset.njk
+++ b/src/templates/password-reset.njk
@@ -22,7 +22,7 @@
                                 <div class="form-group">
                                     <button type="button" class="btn btn-primary btn-lg btn-block text-uppercase">Reset</button>
                                 </div>
-                                <p class="small text-muted mb-0">Remember your password? <a href="sign-in.html" class="text-secondary text-underline">Sign in</a>
+                                <p class="small text-muted mb-0">Remember your password? <a href="https://employer-web-client-iota-ashen.vercel.app/login" class="text-secondary text-underline">Sign in</a>
                             </div>
                         </div>
                     </div>
