--- a/src/templates/sign-up.njk
+++ b/src/templates/sign-up.njk
@@ -32,7 +32,7 @@
                             <div class="card-body">
                                 <svg width="45" height="45" class="mr-1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><defs><style>.a{fill:none;stroke:currentColor;stroke-linecap:round;stroke-linejoin:round;}</style></defs><title>professions-man-office-1</title><path class="a" d="M13.5,11.017a2.5,2.5,0,0,1-3,0"/><path class="a" d="M23,23.517V20.411a1.976,1.976,0,0,0-.77-1.579C20.9,17.813,17.73,16.017,12,16.017s-8.895,1.8-10.23,2.815A1.976,1.976,0,0,0,1,20.411v3.106"/><path class="a" d="M14,8.267a.25.25,0,1,1-.25.25.25.25,0,0,1,.25-.25"/><path class="a" d="M10,8.267a.25.25,0,1,1-.25.25.25.25,0,0,1,.25-.25"/><path class="a" d="M18,6.517a6,6,0,0,0-12,0v2a6,6,0,0,0,12,0Z"/><path class="a" d="M18,6.517c-1.327,0-4.058.337-6-2-1.942,2.337-4.673,2-6,2"/><path class="a" d="M14,23.517,12.478,18.57a.5.5,0,0,0-.956,0L10,23.517"/><line class="a" x1="19.5" y1="22.517" x2="16.5" y2="22.517"/></svg>
                                 <span class="h4 mt-5">Are you an employee?</span>
-                                <span class="font-size-6 mb-0">Download the app: <a href="https://apps.apple.com/us/app/jobcore-talent/id1437290430?app=itunes&ign-mpt=uo%3D4">Apple Store</a> or <a href="https://play.google.com/store/apps/details?id=co.jobcore.talent&hl=en_US">Google Play Store</a></span>
+                                <span class="font-size-6 mb-0">Download the app: <a href="https://play.google.com/store/apps/details?id=co.jobcore.talent.beta">Google Play Store</a></span>
                             
                             </div>
                         </div>                       
@@ -45,7 +45,7 @@
                         </div>
                         <div class="col-12 col-md-auto">
                             <p class="small text-muted mb-0">Already an employer? 
-                                <a href="https://employer.jobcore.co/" class="text-secondary">Log in here</a>
+                                <a href="https://employer-web-client-iota-ashen.vercel.app/login" class="text-secondary">Log in here</a>
                             </p>
                         </div>
                     </div>
